Update API URL to use live Render backend: https://shoestopper-backend.onrender.com/api

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # Backend API URL
-VITE_API_URL=http://localhost:4000/api
+# For development: http://localhost:4000/api
+# For production: https://shoestopper-backend.onrender.com/api
+VITE_API_URL=https://shoestopper-backend.onrender.com/api
