--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,25 +9,25 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
-        
+
     - name: Install dependencies
       run: npm ci
-        
+
     - name: Build
       run: npm run build
       env:
-        VITE_API_URL: https://your-backend-url.onrender.com/api
-        
+        VITE_API_URL: https://shoestopper-backend.onrender.com/api
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
