--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,41 +2,34 @@ name: Deploy Frontend to GitHub Pages
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
-        cache-dependency-path: frontend/shoestopper/package-lock.json
-        
+
     - name: Install dependencies
-      run: |
-        cd frontend/shoestopper
-        npm ci
-        
+      run: npm ci
+
     - name: Build
-      run: |
-        cd frontend/shoestopper
-        npm run build
+      run: npm run build
       env:
         VITE_API_URL: https://shoestopper-backend.onrender.com/api
-        
+        VITE_ROUTER_BASENAME: /ShoeStopper
+
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/master'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: frontend/shoestopper/dist
-        destination_dir: shoestopper-frontend
+        publish_dir: dist
